crates/plotnik-tests/tests/03-analyze/self_recursion/no_escape_wins_over_no_progress.txt
E = [(E)]
------------------ DIAGNOSTICS -------------------
error: infinite recursion: no escape path
 --> query.ptk:1:7
  |
1 | E = [(E)]
  |       ^
  |       |
  |       E references itself
  |
help: add an alternative to `E` that does not reference `E`
------------------ DEFINITIONS -------------------
E
  E (cycle)
